- prevent flickering of content

--- a/schedule/schedule-appengine/src/main/stylesheet/waszczpa.less
+++ b/schedule/schedule-appengine/src/main/stylesheet/waszczpa.less
@@ -1,5 +1,9 @@
 /* BEGIN: OAuth buttons */
 
+md-content {
+  overflow-y: scroll;
+}
+
 body {
   padding: 0 !important;
   margin: 0 !important;
